compiles in quartus

--- a/miniSRC.qsf
+++ b/miniSRC.qsf
@@ -42,6 +42,178 @@ set_global_assignment -name TOP_LEVEL_ENTITY miniSRC
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:46:44  APRIL 01, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
+set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
+set_location_assignment PIN_N25 -to iSW[0]
+set_location_assignment PIN_N26 -to iSW[1]
+set_location_assignment PIN_P25 -to iSW[2]
+set_location_assignment PIN_AE14 -to iSW[3]
+set_location_assignment PIN_AF14 -to iSW[4]
+set_location_assignment PIN_AD13 -to iSW[5]
+set_location_assignment PIN_AC13 -to iSW[6]
+set_location_assignment PIN_C13 -to iSW[7]
+set_location_assignment PIN_B13 -to iSW[8]
+set_location_assignment PIN_A13 -to iSW[9]
+set_location_assignment PIN_N1 -to iSW[10]
+set_location_assignment PIN_P1 -to iSW[11]
+set_location_assignment PIN_P2 -to iSW[12]
+set_location_assignment PIN_T7 -to iSW[13]
+set_location_assignment PIN_U3 -to iSW[14]
+set_location_assignment PIN_U4 -to iSW[15]
+set_location_assignment PIN_V1 -to iSW[16]
+set_location_assignment PIN_V2 -to iSW[17]
+set_location_assignment PIN_AF10 -to oHEX0[0]
+set_location_assignment PIN_AB12 -to oHEX0[1]
+set_location_assignment PIN_AC12 -to oHEX0[2]
+set_location_assignment PIN_AD11 -to oHEX0[3]
+set_location_assignment PIN_AE11 -to oHEX0[4]
+set_location_assignment PIN_V14 -to oHEX0[5]
+set_location_assignment PIN_V13 -to oHEX0[6]
+set_location_assignment PIN_V20 -to oHEX1[0]
+set_location_assignment PIN_V21 -to oHEX1[1]
+set_location_assignment PIN_W21 -to oHEX1[2]
+set_location_assignment PIN_Y22 -to oHEX1[3]
+set_location_assignment PIN_AA24 -to oHEX1[4]
+set_location_assignment PIN_AA23 -to oHEX1[5]
+set_location_assignment PIN_AB24 -to oHEX1[6]
+set_location_assignment PIN_AB23 -to oHEX2[0]
+set_location_assignment PIN_V22 -to oHEX2[1]
+set_location_assignment PIN_AC25 -to oHEX2[2]
+set_location_assignment PIN_AC26 -to oHEX2[3]
+set_location_assignment PIN_AB26 -to oHEX2[4]
+set_location_assignment PIN_AB25 -to oHEX2[5]
+set_location_assignment PIN_Y24 -to oHEX2[6]
+set_location_assignment PIN_Y23 -to oHEX3[0]
+set_location_assignment PIN_AA25 -to oHEX3[1]
+set_location_assignment PIN_AA26 -to oHEX3[2]
+set_location_assignment PIN_Y26 -to oHEX3[3]
+set_location_assignment PIN_Y25 -to oHEX3[4]
+set_location_assignment PIN_U22 -to oHEX3[5]
+set_location_assignment PIN_W24 -to oHEX3[6]
+set_location_assignment PIN_U9 -to oHEX4[0]
+set_location_assignment PIN_U1 -to oHEX4[1]
+set_location_assignment PIN_U2 -to oHEX4[2]
+set_location_assignment PIN_T4 -to oHEX4[3]
+set_location_assignment PIN_R7 -to oHEX4[4]
+set_location_assignment PIN_R6 -to oHEX4[5]
+set_location_assignment PIN_T3 -to oHEX4[6]
+set_location_assignment PIN_T2 -to oHEX5[0]
+set_location_assignment PIN_P6 -to oHEX5[1]
+set_location_assignment PIN_P7 -to oHEX5[2]
+set_location_assignment PIN_T9 -to oHEX5[3]
+set_location_assignment PIN_R5 -to oHEX5[4]
+set_location_assignment PIN_R4 -to oHEX5[5]
+set_location_assignment PIN_R3 -to oHEX5[6]
+set_location_assignment PIN_R2 -to oHEX6[0]
+set_location_assignment PIN_P4 -to oHEX6[1]
+set_location_assignment PIN_P3 -to oHEX6[2]
+set_location_assignment PIN_M2 -to oHEX6[3]
+set_location_assignment PIN_M3 -to oHEX6[4]
+set_location_assignment PIN_M5 -to oHEX6[5]
+set_location_assignment PIN_M4 -to oHEX6[6]
+set_location_assignment PIN_L3 -to oHEX7[0]
+set_location_assignment PIN_L2 -to oHEX7[1]
+set_location_assignment PIN_L9 -to oHEX7[2]
+set_location_assignment PIN_L6 -to oHEX7[3]
+set_location_assignment PIN_L7 -to oHEX7[4]
+set_location_assignment PIN_P9 -to oHEX7[5]
+set_location_assignment PIN_N9 -to oHEX7[6]
+set_location_assignment PIN_G26 -to iKEY[0]
+set_location_assignment PIN_N23 -to iKEY[1]
+set_location_assignment PIN_P23 -to iKEY[2]
+set_location_assignment PIN_W26 -to iKEY[3]
+set_location_assignment PIN_AE23 -to oLEDR[0]
+set_location_assignment PIN_AF23 -to oLEDR[1]
+set_location_assignment PIN_AB21 -to oLEDR[2]
+set_location_assignment PIN_AC22 -to oLEDR[3]
+set_location_assignment PIN_AD22 -to oLEDR[4]
+set_location_assignment PIN_AD23 -to oLEDR[5]
+set_location_assignment PIN_AD21 -to oLEDR[6]
+set_location_assignment PIN_AC21 -to oLEDR[7]
+set_location_assignment PIN_AA14 -to oLEDR[8]
+set_location_assignment PIN_Y13 -to oLEDR[9]
+set_location_assignment PIN_AA13 -to oLEDR[10]
+set_location_assignment PIN_AC14 -to oLEDR[11]
+set_location_assignment PIN_AD15 -to oLEDR[12]
+set_location_assignment PIN_AE15 -to oLEDR[13]
+set_location_assignment PIN_AF13 -to oLEDR[14]
+set_location_assignment PIN_AE13 -to oLEDR[15]
+set_location_assignment PIN_AE12 -to oLEDR[16]
+set_location_assignment PIN_AD12 -to oLEDR[17]
+set_location_assignment PIN_AE22 -to oLEDG[0]
+set_location_assignment PIN_AF22 -to oLEDG[1]
+set_location_assignment PIN_W19 -to oLEDG[2]
+set_location_assignment PIN_V18 -to oLEDG[3]
+set_location_assignment PIN_U18 -to oLEDG[4]
+set_location_assignment PIN_U17 -to oLEDG[5]
+set_location_assignment PIN_AA20 -to oLEDG[6]
+set_location_assignment PIN_Y18 -to oLEDG[7]
+set_location_assignment PIN_Y12 -to oLEDG[8]
+set_location_assignment PIN_D13 -to iCLK_27
+set_location_assignment PIN_N2 -to iCLK_50
+set_location_assignment PIN_K4 -to LCD_RW
+set_location_assignment PIN_K3 -to LCD_EN
+set_location_assignment PIN_K1 -to LCD_RS
+set_location_assignment PIN_J1 -to LCD_DATA[0]
+set_location_assignment PIN_J2 -to LCD_DATA[1]
+set_location_assignment PIN_H1 -to LCD_DATA[2]
+set_location_assignment PIN_H2 -to LCD_DATA[3]
+set_location_assignment PIN_J4 -to LCD_DATA[4]
+set_location_assignment PIN_J3 -to LCD_DATA[5]
+set_location_assignment PIN_H4 -to LCD_DATA[6]
+set_location_assignment PIN_H3 -to LCD_DATA[7]
+set_location_assignment PIN_L4 -to LCD_ON
+set_location_assignment PIN_K2 -to LCD_BLON
+set_location_assignment PIN_C8 -to VGA_R[0]
+set_location_assignment PIN_F10 -to VGA_R[1]
+set_location_assignment PIN_G10 -to VGA_R[2]
+set_location_assignment PIN_D9 -to VGA_R[3]
+set_location_assignment PIN_C9 -to VGA_R[4]
+set_location_assignment PIN_A8 -to VGA_R[5]
+set_location_assignment PIN_H11 -to VGA_R[6]
+set_location_assignment PIN_H12 -to VGA_R[7]
+set_location_assignment PIN_F11 -to VGA_R[8]
+set_location_assignment PIN_E10 -to VGA_R[9]
+set_location_assignment PIN_B9 -to VGA_G[0]
+set_location_assignment PIN_A9 -to VGA_G[1]
+set_location_assignment PIN_C10 -to VGA_G[2]
+set_location_assignment PIN_D10 -to VGA_G[3]
+set_location_assignment PIN_B10 -to VGA_G[4]
+set_location_assignment PIN_A10 -to VGA_G[5]
+set_location_assignment PIN_G11 -to VGA_G[6]
+set_location_assignment PIN_D11 -to VGA_G[7]
+set_location_assignment PIN_E12 -to VGA_G[8]
+set_location_assignment PIN_D12 -to VGA_G[9]
+set_location_assignment PIN_J13 -to VGA_B[0]
+set_location_assignment PIN_J14 -to VGA_B[1]
+set_location_assignment PIN_F12 -to VGA_B[2]
+set_location_assignment PIN_G12 -to VGA_B[3]
+set_location_assignment PIN_J10 -to VGA_B[4]
+set_location_assignment PIN_J11 -to VGA_B[5]
+set_location_assignment PIN_C11 -to VGA_B[6]
+set_location_assignment PIN_B11 -to VGA_B[7]
+set_location_assignment PIN_C12 -to VGA_B[8]
+set_location_assignment PIN_B12 -to VGA_B[9]
+set_location_assignment PIN_B8 -to VGA_CLK
+set_location_assignment PIN_D6 -to VGA_BLANK
+set_location_assignment PIN_A7 -to VGA_HS
+set_location_assignment PIN_D8 -to VGA_VS
+set_location_assignment PIN_B7 -to VGA_SYNC
+set_global_assignment -name VERILOG_FILE memory/MMU.v
+set_global_assignment -name VERILOG_FILE memory/memory.v
+set_global_assignment -name VERILOG_FILE util/debounce.v
+set_global_assignment -name VERILOG_FILE util/clock_div.v
+set_global_assignment -name VERILOG_FILE miniSRC.v
 set_global_assignment -name VERILOG_FILE seven_segments/seven_seg.v
 set_global_assignment -name VERILOG_FILE seven_segments/sev_segs.v
 set_global_assignment -name VERILOG_FILE Processor/ALU/XOR.v
@@ -60,9 +232,4 @@ set_global_assignment -name VERILOG_FILE Processor/RegFile.v
 set_global_assignment -name VERILOG_FILE Processor/REG32.v
 set_global_assignment -name VERILOG_FILE Processor/Processor.v
 set_global_assignment -name VERILOG_FILE Processor/Datapath.v
-set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
